# poetry-bumpversion

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-app.yml  version-bump.yml  version-tag.yml
poetry_bumpversion/: __main__.py
tests/: test_cli.py  test_directory_path.py  test_increase_version.py
