[tool.poetry]
name = "poetry-bumpversion"
version = "0.1.1"
description = "Bumps the version in pyproject.toml and creates a git commit + tag"
authors = ["Niels Lemmens <1936122+bulv1ne@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/bulv1ne/poetry-bumpversion"
license = "MIT"
include = ["CHANGELOG.md"]

[tool.poetry.scripts]
poetry-bumpversion = 'poetry_bumpversion.__main__:main'

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
flake8 = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
